--- a/SDL/SDL.vcxproj.filters
+++ b/SDL/SDL.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Classes.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="second.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Images\1st_Level.png">
